2008-06-23  Øyvind Kolås  <pippin@gimp.org>

	Documentation improvements (mostly orthographic) from Peter
	(gib_mir_mehl at gmx.net).

	* gegl/buffer/gegl-buffer.c:
	* gegl/buffer/gegl-buffer.h:
	* gegl/gegl-config.c:
	* gegl/graph/gegl-node.c:
	* gegl/operation/gegl-operation.h:
	* gegl/process/gegl-processor.c:
	* operations/affine/affine.c:
	* operations/affine/rotate.c:
	* operations/common/c2g.c:
	* operations/common/difference-of-gaussians.c:
	* operations/common/introspect.c:
	* operations/common/rectangle.c:
	* operations/common/stretch-contrast.c:
	* operations/external/display.c:
	* operations/external/save-pixbuf.c:
	* operations/workshop/snn-percentile.c:

2008-06-23  Øyvind Kolås  <pippin@gimp.org>

	* gegl/property-types/gegl-color.c: (gegl_color_get_string): applied
	change from Peter gib_mir_mehl at gmx.net.

2008-06-20  Øyvind Kolås  <pippin@gimp.org>

	* gegl/buffer/gegl-sampler-lanczos.c: (gegl_sampler_lanczos_get):
	added comment about section that can be moved from the sampler
	function to prepare to avoid per sampling overhead.

2008-06-20  Øyvind Kolås  <pippin@gimp.org>

	* gegl/buffer/gegl-sampler.[ch]: (gegl_sampler_get_ptr): added a
	function used to prime a linear buffer with all needed samples for
	interpolation.

	For all the interpolators, removed unneded alpha multiplications
	(we're interpolating on premultiplied pixels), also moved linear and
	cubic to skip unneeded function calls in innerloop.
	* gegl/buffer/gegl-sampler-cubic.c:
	* gegl/buffer/gegl-sampler-lanczos.c:
	* gegl/buffer/gegl-sampler-linear.c:
	* gegl/buffer/gegl-sampler-nearest.c:

2008-06-20  Øyvind Kolås  <pippin@gimp.org>

	* gegl/buffer/gegl-sampler.c: (gegl_sampler_prepare): reset the
	valid rectangle when prepare is called.
	* operations/affine/affine.c: (process): reset the valid rectangle
	before starting processing.

2008-06-19  Øyvind Kolås  <pippin@gimp.org>

	* gegl/buffer/gegl-sampler.c: (gegl_sampler_get_from_buffer): fetch