@@ -6,8 +6,8 @@ Sven Neumann, Michael Natterer, Øyvind Kolås, Philip Lafleur, Dominik Ernst,
 Richard Kralovic, Kevin Cozens, Victor Bogado, Martin Nordholts, Geert
 Jordaens, Michael Schumacher, John Marshall, Étienne Bersac, Mark Probst, Håkon
 Hitland, Tor Lillqvist, Hans Breuer, Deji Akingunola and Bradley Broom,
-Hans Petter Jansson, Jan Heller, dmacks@netscpace.org, Sven Anders and 
-Hubert Figuiere.
+Hans Petter Jansson, Jan Heller, dmacks@netscpace.org, Sven Anders, 
+Hubert Figuiere and Zhang Junbo.
 
 Documentation:
 ^^^^^^^^^^^^^^
