@@ -1,0 +1,6 @@
+SUBDIRS = tools
+include $(top_srcdir)/operations/Makefile-operations.am
+
+INCLUDES = $(FFTW_CFLAGS)
+
+LDADD = $(FFTW_LIBS)
