@@ -1,0 +1,4 @@
+EXTRA_DIST = \
+	fourier.c	\
+	display.c	\
+	component.c
